--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,12 @@ dash-renderer==1.2.3
 dash-table==4.6.0
 decorator==4.4.1
 defusedxml==0.6.0
+engineering-notation==0.6.0
 entrypoints==0.3
 Flask==1.1.1
 Flask-Compress==1.4.0
 Flask-Cors==3.0.8
+Flask-Uploads==0.2.1
 future==0.18.2
 importlib-metadata==1.4.0
 ipykernel==5.1.3
@@ -65,6 +67,7 @@ Send2Trash==1.5.0
 six==1.14.0
 terminado==0.8.3
 testpath==0.4.4
+tk-tools==0.11.0
 tornado==6.0.3
 traitlets==4.3.3
 typed-ast==1.4.1
